changed index.html work

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="page-content">
         <h5>Pick a number between 1 and 6.</h5>
 
-        <!-- Input textline -->
-        <!-- MDL Textbox for Number -->
+        <!-- Input text line -->
+        <!-- MDL Text line for Number -->
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="number" id="user-number" min="1" max="6">
           <label class="mdl-textfield__label" for="user-number">Number...</label>
