--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="Convert Random number guess, in Javascript" />
+  <meta name="description" content="Random number guess, in Javascript" />
   <meta name="keywords" content="mths, icd2o" />
   <meta name="author" content="Kyle Matthew" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
